# launcher

./: Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  vite.config.js  webarcade.config.json
.github/workflows/: build.yml
app/: Cargo.toml
app/scripts/: build.js
app/src/: auto_update.rs  main.rs
plugins/launcher/: Cargo.toml  EnginePage.jsx  HomePage.jsx  LibraryPage.jsx  MarketplacePage.jsx  SettingsPage.jsx  Sidebar.jsx  StorePage.jsx  api.jsx  icons.jsx  index.jsx  mod.rs  package.json  router.rs  theme.jsx
plugins/updater/: Cargo.toml  index.jsx  mod.rs  package.json  router.rs
src/: App.jsx  api.jsx  config.rs  icons.jsx  main.rs
src/components/: Sidebar.jsx  Titlebar.jsx
src/pages/: AssetDetail.jsx  EnginePage.jsx  HomePage.jsx  LibraryPage.jsx  MarketplacePage.jsx  PreviewPlayer.jsx  PublishPage.jsx  SettingsPage.jsx  StorePage.jsx
src/routes/: auth.rs  download.rs  engine.rs  marketplace.rs  mod.rs  proxy.rs  updater.rs  upload.rs
