[package]
name = "renzora-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
webarcade = "1"
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.15"
lazy_static = "1"
include_dir = "0.7"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
