[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rfd = "0.15"
dirs = "5.0"
zip = "0.6"

[routes]
"GET /releases" = "handle_releases"
"GET /installed" = "handle_installed"
"POST /install" = "handle_install"
"POST /uninstall" = "handle_uninstall"
"POST /launch" = "handle_launch"
"GET /config" = "handle_get_config"
"POST /config" = "handle_set_config"
"POST /login" = "handle_login"
"POST /register" = "handle_register"
"POST /logout" = "handle_logout"
"GET /library" = "handle_library"
"GET /game-library" = "handle_game_library"
"POST /download" = "handle_download"
"POST /browse" = "handle_browse"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
